components set and path changed

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,12 @@
         }
     ],
     "require": {
-        "twitter/bootstrap": "3.3.*@dev",
+        "components/bootstrap": "dev-master",
         "eonasdan/bootstrap-datetimepicker": "dev-master",
         "jasongrimes/paginator": "dev-master"
+    },
+    "config": {
+        "preferred-install": "dist",
+        "component-dir": "web/components"
     }
 }
