--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         }
     ],
     "require": {
+        "robloach/component-installer": "1.0.*@dev",
         "components/bootstrap": "dev-master",
         "eonasdan/bootstrap-datetimepicker": "dev-master",
         "jasongrimes/paginator": "dev-master"
     },
     "config": {
-        "preferred-install": "dist",
         "component-dir": "web/components"
     }
 }
